add SEP10 challange endpoint
